# rapporteur_helper

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  generate_reports.py  mkdocs.yml  pyproject.toml
.github/instructions/: general.instructions.md
docs/: index.md  modules.md
src/rapporteur_helper/: __init__.py  __main__.py  generate_reports.py
src/rapporteur_helper/content/: __init__.py  contacts.py  documents.py
src/rapporteur_helper/data/: constants.py  template.docx
src/rapporteur_helper/html/: __init__.py
src/rapporteur_helper/itut/: __init__.py  endpoints.py  questions.py  work_programme.py
src/rapporteur_helper/word_docx/: links.py  paragraph.py  tables.py
